# alphafold3-mac

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  fetch_databases.sh  install.command  mkdocs.yml  pyproject.toml  run_alphafold.py  run_alphafold_data_test.py  run_alphafold_mlx.py  run_alphafold_test.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  git-commit-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  pages.yaml
benchmarks/: __init__.py  attention_benchmark.py  diffusion_benchmark.py  e2e_benchmark.py  evoformer_benchmark.py  geometry_benchmark.py  memory_profile.py  pairformer_benchmark.py  pipeline_benchmark.py
docs/: index.md  known_issues.md
docs/getting-started/: installation.md  pipeline-setup.md  quickstart.md  updating.md
docs/reference/: api.md  cli.md  validation-policy.md
docs/user-guide/: hpc-apptainer.md  input-format.md  performance.md  restraint-guided-docking.md  troubleshooting.md  web-interface.md
examples/: desi1_dimer.json  desi1_monomer.json
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/: _load_config.sh  alphafold3.sh  build_hmmer_macos.sh  check_deps.py  dev-stop.sh  dev.sh  install.sh  prod.sh  run_validation_tests.sh  start.sh  validate_data_pipeline_paths.py  verify_cpp_extensions.sh
src/alphafold3/: build_data.py
src/alphafold3_mlx/: __init__.py  atom_layout.py  feat_batch.py
tests/: __init__.py  conftest.py  test_install.sh  test_install_e2e.sh
tests/fixtures/: minimal_test_db.fasta  test_sequence.fasta
tests/integration/: test_api_restraint_workflow.py  test_cli.py  test_data_pipeline.py  test_diffusion_loop.py  test_e2e.py  test_end_to_end.py  test_end_to_end_jax_parity.py  test_geometry_integration.py  test_geometry_parity.py  test_large_proteins.py  test_msa_processing.py  test_precision_modes.py  test_ranking.py  test_recycling_stability.py  test_restrained_inference.py  test_restraint_pipeline_smoke.py  test_sampling.py  test_structure_validity.py
tests/reference/: __init__.py  test_golden_persistence.py  test_jax_harness.py
tests/spike/: __init__.py  test_attention.py
tests/unit/: test_cli_unit.py  test_confidence_head.py  test_cpp_extensions.py  test_diffusion_head.py  test_evoformer.py  test_feature_construction.py  test_inference_stats.py  test_input_handler.py  test_jax_numerical_parity.py  test_jax_parity.py  test_model_compile.py  test_module_parity.py  test_output_handler.py  test_pairformer.py  test_restraint_early_validation.py  test_restraint_guidance.py  test_restraint_loss.py  test_restraint_resolve.py  test_restraint_types.py  (+6 more)
(+202 files in other folders)
